Update cross_rs4s.yaml - by Emil Tin

--- a/.github/workflows/cross_rs4s.yaml
+++ b/.github/workflows/cross_rs4s.yaml
@@ -4,15 +4,22 @@
 # documentation.
 # This workflow will run rspec
 
-name: Cross RS4S TLC
-on: push
+name: Cross RS4S
+on:
+  pull_request:
+    types: [ opened, reopened, synchronize, labeled ]
+  schedule:
+    # schedule runs only on the default branch. time is in UTC.
+    # * is a special character in YAML so you have to quote this string.
+    # run every night at 10:00PM UTC.
+    - cron:  '0 22 * * *'
 jobs:
   validator:
-    timeout-minutes: 30
-    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'testhub') }}
+    runs-on: [ self-hosted, Linux, X64, cross-rs4s ]
     strategy:
       matrix:
-        core: ['3.2.2']
+        core: ['3.1.2', '3.1.3', '3.1.4', '3.1.5', '3.2.0', '3.2.1', '3.2.2']
       fail-fast: false
 
     steps:
@@ -21,8 +28,7 @@ jobs:
       id: log_id
       run: |
         echo "LOG_ID=\
-        gem-tlc-\
-        ubuntu-latest-\
+        cross-rs4s-\
         core-${{ matrix.core }}-\
         run-\
         ${{ github.run_id }}-\
@@ -30,7 +36,7 @@ jobs:
         ${{ github.run_attempt }}\
         " >> $GITHUB_OUTPUT
 
-    - name: Checkout repo
+    - name: Check out repository
       uses: actions/checkout@v4
 
     - name: Install Ruby and gems
@@ -38,26 +44,16 @@ jobs:
       with:
         bundler-cache: true
 
-    - name: Start TLC in background
-      shell: bash
-      run: |
-        bundle exec rsmp site \
-        --config config/cross_rs4s.yaml \
-        2>&1 > cross-rs4s-${{ steps.log_id.outputs.LOG_ID }}.log \
-        &
-    
     - name: Run tests
-      shell: bash
       run: |
         bundle exec rspec spec/site \
         --format Validator::Brief \
         --format Validator::Details \
         --out validator-${{ steps.log_id.outputs.LOG_ID }}.log
-        
       env:
         SITE_CONFIG: config/cross_rs4s.yaml
         CORE_VERSION: ${{ matrix.core}}
-    
+
     - name: Show detailed log
       shell: bash
       if: always() # even if previous steps failed
@@ -69,10 +65,3 @@ jobs:
       with:
         name: validator-${{ steps.log_id.outputs.LOG_ID }}.log
         path: validator-${{ steps.log_id.outputs.LOG_ID }}.log
-    
-    - name: Upload simulator.log
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: simulator-${{ steps.log_id.outputs.LOG_ID }}.log
-        path: simulator-${{ steps.log_id.outputs.LOG_ID }}.log
