--- a/.github/workflows/cross_rs4s_2.yaml
+++ b/.github/workflows/cross_rs4s_2.yaml
@@ -16,7 +16,7 @@ on:
 jobs:
   validator:
     if: ${{ github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'testhub') }}
-    runs-on: [ self-hosted, Linux, X64, cross-rs4s ]
+    runs-on: [ self-hosted, Linux, X64, pksoft72-debian ]
     strategy:
       matrix:
         core: ['3.1.2', '3.1.3', '3.1.4', '3.1.5', '3.2.0', '3.2.1', '3.2.2']
