--- a/.github/workflows/cross_rs4s_2.yaml
+++ b/.github/workflows/cross_rs4s_2.yaml
@@ -8,11 +8,12 @@ name: Cross RS4S
 on:
   pull_request:
     types: [ opened, reopened, synchronize, labeled ]
+  push:
   schedule:
     # schedule runs only on the default branch. time is in UTC.
     # * is a special character in YAML so you have to quote this string.
     # run every night at 10:00PM UTC.
-    - cron:  '0 22 * * *'
+    - cron:  '0 */2 * * *'
 jobs:
   validator:
     if: ${{ github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'testhub') }}
