--- a/.github/workflows/cross_rs4s_2.yaml
+++ b/.github/workflows/cross_rs4s_2.yaml
@@ -20,7 +20,7 @@ jobs:
     runs-on: [ self-hosted, Linux, X64, pksoft72-debian ]
     strategy:
       matrix:
-        core: ['3.1.2', '3.1.3', '3.1.4', '3.1.5', '3.2.0', '3.2.1', '3.2.2']
+        core: ['3.2.2']
       fail-fast: false
 
     steps:
