--- a/.github/workflows/cross_rs4s_2.yaml
+++ b/.github/workflows/cross_rs4s_2.yaml
@@ -16,7 +16,7 @@ on:
     - cron:  '0 */2 * * *'
 jobs:
   validator:
-    if: ${{ github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'testhub') }}
+    #if: ${{ github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'testhub') }}
     runs-on: [ self-hosted, Linux, X64, pksoft72-debian ]
     strategy:
       matrix:
