--- a/.github/workflows/cross_rs4s_2.yaml
+++ b/.github/workflows/cross_rs4s_2.yaml
@@ -8,7 +8,6 @@ name: Cross RS4S
 on:
   pull_request:
     types: [ opened, reopened, synchronize, labeled ]
-  push:
   schedule:
     # schedule runs only on the default branch. time is in UTC.
     # * is a special character in YAML so you have to quote this string.
@@ -16,7 +15,7 @@ on:
     - cron:  '0 */2 * * *'
 jobs:
   validator:
-    if: ${{ github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'testhub') }}
+#    if: ${{ github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'testhub') }}
     runs-on: [ self-hosted, Linux, X64, pksoft72-debian ]
     strategy:
       matrix:
